Sun Feb 12 11:54:57 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: rewrote logical-to-physical value conversion. Rewrote
   extraction of logical values from report. Added Kelvin-to-Celsius
   conversion. Tweaked APC date conversion. Back-UPS BF500 support.  
   Deleted unused items in HIDItem structure.

Sat Feb 11 16:10:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - serial.c: changed ser_send_char to use "unsigned char" instead of "char"

Fri Feb 10 22:23:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - serial.c: changed several generic serial port communication
   functions to use buffers of type "unsigned char" instead of "char".
 - belkinunv.c, bcmxcp_ser.c: removed superflous type casts

Fri Feb	10 09:44:10 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Apply patch from Niels Baggesen.
   * Re-imported nitram.c and nitram.h with unix style line ending.
   * Patch to al175 and gendb.
     -------
      Also, the al175 has some c++ style declarations in the middle of the
      code blocks and some non-conforming %lf format specifiers, and gendb has
      a csh style redirection that a true sh does not like. I have attached
      patches for those.
     -------

Thu Feb  9 21:00:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - Changes to upsdrvctl
   * execute silently by default (wasn't used consistently anyway)
   * use upsdebugx() to show additional information if wanted, which
     replaces the verbose option (this is much more flexible)
   * removed 'status' command (used to be implemented the same way as
     until nut-2.0.0, but turns out to be too limited to be useful,
     for exactly the same reason)
   * use sendsignalfn() from common instead of rolling our own

Thu Feb  9 20:45:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - Changes to common
   * sendsignalfn() and sendsignal() let caller know if a signal was sent