@@ -12,7 +12,7 @@ and NUT variable naming.
 |PowerSummary.DesignCapacity				| 100					| +-------------------------------------------------------+---------------------------------------+
 |PowerSummary.FullChargeCapacity			| 100					| +-------------------------------------------------------+---------------------------------------+
 |PowerSummary.Rechargeable				| true / yes / 1			| +-------------------------------------------------------+---------------------------------------+
-|PowerSummary.ConfigVoltage				| output.voltage.target.line		| +-------------------------------------------------------+---------------------------------------+
+|PowerSummary.ConfigVoltage				| output.voltage.nominal		| +-------------------------------------------------------+---------------------------------------+
 |PowerSummary.WarningCapacityLimit			| ?  battery.charge.low 		| +-------------------------------------------------------+---------------------------------------+
 |PowerSummary.RemainingCapacityLimit			| battery.charge.low			| +-------------------------------------------------------+---------------------------------------+
 |PowerSummary.CapacityGranularity1			| ?					| +-------------------------------------------------------+---------------------------------------+
